@@ -1,3 +1,4 @@
 
 brk segment overflow in thread #1: can't grow to 0x........
+(see section Limitations in user manual)
 
